# quant-options-ml

./: .gitignore  LICENSE  README.md  data_dictionary.md
data/: spy_options_19.parquet  spy_options_20.parquet  spy_options_21.parquet  spy_options_22.parquet  spy_options_23.parquet  spy_options_24.parquet
inference/: bootstrap_history.py  calibration.py  config.toml  data_utils.py  execute.py  execute_dynamic.py  execute_fixed.py  execute_shared.py  features.py  fetch.py  infer.py  model_gbt.py  model_nn.py  pyproject.toml  run.py  run_dynamic.py  run_fixed.py  start.sh
inference/deployment_models/dynamic/nn/: best_nn_2026.pt  nn_thresholds_2026.json
models/models_dynamic/gbt/: gbt_thresholds_2026.json
models/models_fixed/gbt/: gbt_thresholds_2026.json
thetadata/data_retrievals/: client.py  generate_calendar.py  greeks_eod.py  greeks_q1.py  greeks_q2.py  greeks_q3.py  greeks_q4.py  iv_q1.py  iv_q2.py  iv_q3.py  iv_q4.py  main.py  ohlc_q1.py  ohlc_q2.py  ohlc_q3.py  ohlc_q4.py  oi.py  process_options_etl.py  quote_q1.py  quote_q2.py  quote_q3.py  quote_q4.py  trade_q1.py  trade_q2.py  trade_q3.py  trade_q4.py  validate_parquet.py
thetadata/processed_parquets/metadata/: fix_duplicates.py  validate_all_parquets.py  validation_report_20260207_201755.json
training/: dataset.py  evaluation.py  generate_exit_labels.py  generate_labels.py  labels.py  model.py  model_exit.py  model_nn.py  preprocess.py  train_exit.py  train_gbt.py  train_nn.py  utils.py
